--- a/about-us/index.html
+++ b/about-us/index.html
@@ -190,10 +190,9 @@
                     <div class="text-center md:p-20">
                         <h1 class="md:text-6xl text-2xl text-center pt-10 text-white  mb-5">
                             ABOUT US
-
                         </h1>
 
-                        <div class="md:flex  block md:justify-center  text-center gap-4 md:pb-36 pb-5">
+                        <div class="md:flex  block md:justify-center  text-center gap-4 md:pb-36 pb-5 mt-20">
                             <a href="#"
                                 class="relative inline-flex items-center justify-start py-3 pl-4 pr-12 overflow-hidden font-semibold text-[#0076F9] transition-all duration-150 ease-in-out rounded hover:pl-10 hover:pr-6 bg-gray-50 group mb-5">
                                 <span
@@ -314,22 +313,16 @@
 
             </div>
         </section>
-        
-
-
-        <section>
+        <section class="mb-10">
             <div class="about_page ">
                 <div class="px-[3%]">
                     <div class="text-center md:mt-40 pt-5">
-                        <h2 class="md:text-4xl text-2xl text-black mt-4 md:pb-10 pb-5">WHO ARE WE?
+                        <h2 class="md:text-4xl text-2xl text-gray-600 font-semibold mt-4 md:pb-10 pb-5">WHO ARE WE ?
                         </h2>
                     </div>
                     <div class="md:grid grid-cols-5 mx-5 ">
-
-
-
                         <div class="col-span-3">
-                            <p class="border border-gray-400 p-5 bg-white  rounded-2xl shadow-lg shadow-indigo-500/40 ">Stand
+                            <p class="border border-gray-100 text-gray-500 p-5 bg-white  rounded-2xl">Stand
                                 Constructions is an <a href="https://www.standconstructions.com/"
                                     class="text-blue-500">exhibition stand
                                     builder </a>that primarily operates in Europe (Germany, UK, Netherlands, Spain,
@@ -381,10 +374,7 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-
             </div>
         </section>
         <br>
@@ -392,92 +382,66 @@
         <section>
             <div class="about_ussection">
                 <div class="px-[5%] py-6">
-                    <div class="md:grid grid-cols-4 gap-4 mt-7 pt-5">
-                        <div class="col-span-2">
-
-
-                            <div class="">
-                                <div class="services-block-three rounded-3xl ">
-                                    <a href=" "
-                                        class=" relative block border border-gray-200 rounded-xl bg-[#2c23238f] text-center mb-5 p-2 text-[ #1325e8] md:h-64">
-                                        <div class="padding-15px-bottom">
-                                            <i class="fa-solid fa-bullseye"></i>
-                                        </div>
-                                        <h4 class="text-[#03a9f5] text-xl mb-5 font-medium">OUR MISSION</h4>
-                                        <p class="text-white " >The Stand Constructions team is
-                                            passionate
-                                            about expanding its reach beyond Europe (Germany, UK, Netherlands, Spain,
-                                            Italy) and
-                                            establishing itself as a trusted <b>exhibition stand design company </b>
-                                            worldwide.
-                                            We aim to offer exceptional support to exhibitors and allow them to increase
-                                            their
-                                            visibility at any exhibition. Our goal is to offer affordable services to
-                                            exhibitors
-                                            that will allow them to maximise their return on investment. </p>
-                                    </a>
-                                </div>
+                    <div class="md:flex md:grid grid-cols-2 gap-4 mt-7 pt-5">
+                        <div class="md:flex-1">
+                            <div class="rounded-3xl">
+                                <a href="#" class="block border border-gray-200 rounded-xl bg-[#2c23238f] text-center mb-5 p-5 text-[#1325e8]">
+                                    <div class="padding-15px-bottom">
+                                        <i class="fa-solid fa-bullseye text-[#03a9f5] text-3xl"></i>
+                                    </div>
+                                    <h4 class="text-[#03a9f5] text-xl mb-5 font-medium">OUR MISSION</h4>
+                                    <p class="text-white">The Stand Constructions team is passionate about expanding its reach beyond Europe (Germany, UK, Netherlands, Spain, Italy) and establishing itself as a trusted <b>exhibition stand design company</b> worldwide. We aim to offer exceptional support to exhibitors and allow them to increase their visibility at any exhibition. Our goal is to offer affordable services to exhibitors that will allow them to maximize their return on investment.</p>
+                                </a>
                             </div>
                         </div>
-                        <div class="col-span-2">
-                            <div class="">
-                                <div class="services-block-three">
-                                    <a href=""
-                                        class=" h-60 relative block border border-gray-200 rounded-xl bg-[#2c23238f] text-center mb-5 p-5 text-[ #1325e8] md:h-64 h-auto pb-3">
-                                        <div class="padding-15px-bottom">
-                                            <i class="fa-solid fa-eye-low-vision"></i>
-                                        </div>
-                                        <h4 class="text-[#03a9f5] text-xl mb-5 font-medium">OUR VISION</h4>
-                                        <p class="text-white mb-5">At Stand Construction, our vision is
-                                            to be a trusted exhibition stand builder that exceeds expectations and helps
-                                            brands move forward. We are passionate about creating innovative and
-                                            captivating exhibition stand designs that spark meaningful conversations. We
-                                            believe in the power of design to attract attention, engage audiences, and
-                                            leave a lasting impression. </p>
-                                    </a>
-                                </div>
+                        <div class="md:flex-1">
+                            <div class="rounded-3xl">
+                                <a href="#" class="block border border-gray-200 rounded-xl bg-[#2c23238f] text-center mb-5 p-5 text-[#1325e8]">
+                                    <div class="padding-15px-bottom">
+                                        <i class="fa-solid fa-eye-low-vision text-[#03a9f5] text-3xl"></i>
+                                    </div>
+                                    <h4 class="text-[#03a9f5] text-xl mb-5 font-medium">OUR VISION</h4>
+                                    <p class="text-white">At Stand Construction, our vision is to be a trusted exhibition stand builder that exceeds expectations and helps brands move forward. We are passionate about creating innovative and captivating exhibition stand designs that spark meaningful conversations. We believe in the power of design to attract attention, engage audiences, and leave a lasting impression.</p>
+                                    <br />
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
-
-        <section class=" bg-blue-100" id="portfolio ">
-            <div class="px-[5%] text-center">
-                <h3 class="md:text-4xl text-2xl font-bold  md:pt-10 ">Some of Our Work That Excelled at the
+        <section class="bg-gray-100 py-10" id="portfolio ">
+            <div class="px-[5%] text-center ">
+                <h3 class="md:text-4xl text-2xl font-bold  text-gray-600">Some of Our Work That Excelled at the
                     Exhibitions</h3>
-
-               
-                <div class="grid md:grid-cols-3 gap-2 md:m-10 md:p-10">
+                <div class="grid md:grid-cols-3 gap-2 md:p-10 md:my-3 my-8">
                     <div class="overflow-hidden  hover:bg-sky-700 boxes ">
-                        <img src="../assets/images/portfolio/portfolio-1.webp" alt="portfolio-img-1" loading="lazy"
+                        <img src="../assets/images/portfolio/one.webp" alt="portfolio-img-1" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow   "
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden">
-                        <img src="../assets/images/portfolio/portfolio-2.webp" alt="portfolio-img-2" loading="lazy"
+                        <img src="../assets/images/portfolio/two.webp" alt="portfolio-img-2" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden">
-                        <img src="../assets/images/portfolio/portfolio-3.webp" alt="portfolio-img-3" loading="lazy"
+                        <img src="../assets/images/portfolio/three.webp" alt="portfolio-img-3" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden">
-                        <img src="../assets/images/portfolio/portfolio-4.webp" alt="portfolio-img-4" loading="lazy"
+                        <img src="../assets/images/portfolio/four.webp" alt="portfolio-img-4" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden">
-                        <img src="../assets/images/portfolio/portfolio-5.webp" alt="portfolio-img-5" loading="lazy"
+                        <img src="../assets/images/portfolio/five.webp" alt="portfolio-img-5" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden">
-                        <img src="../assets/images/portfolio/portfolio-6.webp" alt="portfolio-img-6" loading="lazy"
+                        <img src="../assets/images/portfolio/six.webp" alt="portfolio-img-6" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
@@ -487,41 +451,34 @@
         </section>
 
         <section>
-            <div class="counterrs">
+            <div class="counterrs py-16">
 
-                <h3 class="md:text-3xl text-xl md:mt-10 pt-10  text-center  text-white">NUMBERS THAT SPEAK FOR OUR
+                <h3 class="md:text-3xl text-xl  text-center  text-white/90 mb-10 font-bold">NUMBERS THAT SPEAK FOR OUR
                     SUCCESS</h3>
 
                 <br />
 
-                <div class="px-[3%] py-3">
-                    <div class="md:flex justify-center gap-4 ">
-
-                        <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ease-in-out ">
+                <div class="px-[3%]">
+                    <div class="md:flex justify-center items-center">
+                        <div class="grid md:grid-cols-4 gap-5">
+                        <div class="four col-md-3 counterblur hover:animate-pulse transition delay-150 duration-300 ease-in-out">
                             <div class="counter-box rounded-2xl colored block md:p-10 text-center">
-                                <i
-                                    class="fa-solid fa-earth-europe text-4xl m-4 text-white bg-blue-500 p-5 rounded-full"></i>
-
-                                <span class="counter text-white block text-3xl leading-5">1000 <sup>+</sup></span>
-                                <p class="text-lg text-white">Projects Across Europe</p>
+                                <i class="fa-solid fa-earth-europe text-4xl m-4 text-white bg-blue-500 p-5 rounded-full"></i>
+                                <span class="counter text-white block text-3xl leading-5 my-3">1000 <sup>+</sup></span>
+                                <p class="text-lg text-white mb-2">Projects Across Europe</p>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
                             <div class="counter-box block p-10 text-center">
-                                <i
-                                    class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
-
-                                <span class="counter  text-white block text-3xl leading-5">14650+</span>
+                                <i class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
+                                <span class="counter  text-white block text-3xl leading-5 my-3">14650+</span>
                                 <p class="text-lg text-white">Happy Clients</p>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
                             <div class="counter-box block p-10 text-center">
-                                <i
-                                    class="fa-brands fa-playstation  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
-
-                                <span class="counter  text-white block text-3xl leading-5">
+                                <i class="fa-brands fa-playstation  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
+                                <span class="counter  text-white block text-3xl leading-5 my-3">
                                     1121+
                                 </span>
                                 <p class="text-lg text-white">Trade Shows in Europe</p>
@@ -530,13 +487,11 @@
                         <div
                             class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300    ">
                             <div class="counter-box block p-10 text-center">
-                                <i
-                                    class="fa-solid fa-object-group text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
-
-                                <span class="counter  text-white block text-3xl leading-5">15+
-                                    +</span>
+                                <i class="fa-solid fa-object-group text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
+                                <span class="counter  text-white block text-3xl leading-5 my-3">15</span>
                                 <p class="text-lg text-white">Years in Industry</p>
                             </div>
+                        </div>
                         </div>
                     </div>
 
@@ -549,16 +504,15 @@
             <div class="ourwork">
                 <div class="px-[3%] py-5">
 
-                    <div class="text-center pt-5">
-                        <h2 class="md:text-4xl text-2xl text-black mt-4">CHOOSE STAND CONSTRUCTIONS FOR AN
+                    <div class="text-center py-5">
+                        <h2 class="md:text-4xl text-2xl text-gray-500 font-bold mt-4">CHOOSE STAND CONSTRUCTIONS FOR AN
                             UNPARALLELED EXPERIENCE
                         </h2>
                     </div>
 
                     <div class="col-start-2 col-span-4 ">
-                        <div class="text-center md:p-10 mt-5">
-
-                            <p class=" border border-lightgray-400 rounded-3xl  md:p-10 mb-3 p-5 bg-slate-100 ">
+                        <div class="text-center md:p-10">
+                            <p class="border border-lightgray-400 rounded-3xl  md:p-10 mb-3 p-5 text-gray-500 backdrop-blur-sm">
                                 Stand Constructions recognises itself as a partner in success with exhibitors. That’s
                                 why we build strong relationships that go beyond the exhibition floor. Our team works
                                 with complete dedication and sincerity to ensure that your needs are fulfilled and you
@@ -585,7 +539,7 @@
                 <div>
                     <div class=" offset-md-1">
                         <div class="text-center pt-10">
-                            <span class="text-black text-xl">[ Connect with COMPANY ]</span>
+                            <span class="text-gray-500 text-xl font-semibold">[ Connect with Company ]</span>
 
                         </div>
 
@@ -594,7 +548,7 @@
                     <div class=" relative w-full  p-3 bg-white  md:mt-20 mt-10
             flex justify-center">
                         <span class="big-circle"></span>
-                        <!-- <img src="img/shape.png" class="square" alt="" /> -->
+                        <!--  -->
                         <div class="form">
                             <div class="contact-info">
                                 <h3 class="title">LET US KNOW ABOUT YOUR REQUIREMENTS</h3>
