--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Exhibition Stand Designer, Builder &amp; Contractor in Europe</title>
     <meta name="description"
         content="Stand Constructions is the top-leading exhibition stand designer, builder &amp; contractor in Europe with years of expertise in the exhibition stand industry. Contact for high-quality stands." />
-    <link rel="canonical" href="https://www.standconstructions.com/" />
+    <link rel="canonical" href="https://www.standconstructions.com" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Exhibition Stand Designer, Builder &amp; Contractor in Europe" />
