--- a/stand-design-and-booth-construction-company/berlin/index.html
+++ b/stand-design-and-booth-construction-company/berlin/index.html
@@ -540,7 +540,7 @@
                                                     style="background: radial-gradient(black, transparent 60%); transform: rotate3d(0, 0, 1, 20deg) scale3d(1, 0.6, 1); opacity: 0.2;">
                                                 </div>
                                                 <img class="relative w-40"
-                                                    src="../../assets/images/logos/rt-stuttgart-2027-.jpg" alt="">
+                                                    src="../../assets/images/logos/rt-stuttgart-2027-.jpg" alt="rt-stuttgart">
                                             </div>
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
@@ -655,7 +655,7 @@
                                                     style="background: radial-gradient(black, transparent 60%); transform: rotate3d(0, 0, 1, 20deg) scale3d(1, 0.6, 1); opacity: 0.2;">
                                                 </div>
                                                 <img class="relative w-40"
-                                                    src="../../assets/images/logos/rt-stuttgart-2027-.jpg" alt="">
+                                                    src="../../assets/images/logos/rt-stuttgart-2027-.jpg" alt="rt-stuttgart">
                                             </div>
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
