wrong alt issue

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -52,7 +52,7 @@
             <input type="checkbox" name="check" id="check">
             <div class="flex items-center">
                 <a href="https://www.standconstructions.com">
-                <img src="../assets/images/logos/header-logo.webp" alt="Expo Exhibit Logo" class="h-12" loading="eager">
+                <img src="../assets/images/logos/header-logo.webp" alt="standconstructions-logi" class="h-12" loading="eager">
                 </a>
             </div>
             <div class="nav-btn">
